--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.21.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.5.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.2",
+    "react-icons": "^4.3.1",
+    "react-rating": "^2.0.5",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.10",
+    "uninstall": "^0.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
