--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.1.10",
+    "swiper": "^7.3.0",
     "uninstall": "^0.0.0",
     "web-vitals": "^1.0.1"
   },
